            KDDCup item data
        - recommenders
          - make ItemRecommender and RatingPredictor clonable
          - BiasedMatrixFactorization
            - rename BiasRegularization to BiasReg for consistency with other
              recommenders
            - different regularization parameters for user and item factors
            - add ComputeLoss() (also for MatrixFactorization)
          - BPRMF:
            - get rid of unnecessary IterationLength parameter
            - only interate once over relevant data points in online learning
            - explicitly model item bias
            - significant training speed-up
          - BPR_Linear
            - significant training speed-up
          - Random: remove unnecessary methods
          - Zero: new item recommender that always predicts the score 0
          - rename MyMediaLite.ensemble namespace to MyMediaLite.Ensemble
          - make matrix factorization recommender faster by using
            MatrixUtils.RowScalarProduct
        - command-line tools
          - move DisplayDataStats() for item recommendation from the program
            to the library
          - improved usage information
          - rating prediction: use Mono.Options for command-line parsing
        - evaluation
          - add relevant_users feature for item prediction
          - rating evaluation: check arguments for null
        - data structures
          - IRatings: add CountByUser and CountByItem
          - fix incorrect error message in Matrix class (reported by
            Chris Newell)

1.0	2011-03-19
	- recommenders
          - BPRMF: bug fix in item bias handling (reported by Christian Brauch)
          - UserItemBaseline: use internal splitting to find good regularization
                              parameters
        - API changes
          - new data structures and interfaces for rating prediction and for
            item prediction from implicit feedback (consume less memory)