@@ -85,7 +85,6 @@
     <Compile Include="ItemRecommendation\SemiSupervisedBPRMF.cs" />
     <Compile Include="ItemRecommendation\ISemiSupervisedRecommender.cs" />
     <Compile Include="ItemRecommendation\SemiSupervisedBPRMF_KDD.cs" />
-    <Compile Include="RatingPrediction\BoldDriverBiasedMatrixFactorization.cs" />
     <Compile Include="ItemRecommendation\BoldDriverBPRMF_KDD.cs" />
   </ItemGroup>
   <ItemGroup>
