@@ -11,6 +11,7 @@
               recommenders
             - different regularization parameters for user and item factors
             - add ComputeLoss() (also for MatrixFactorization)
+            - add optional bold driver heuristic for learn rate adaptation
           - BPRMF:
             - get rid of unnecessary IterationLength parameter
             - only interate once over relevant data points in online learning
